--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,73 @@
 body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vh;
-    margin: 0;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vh;
+  margin: 0;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
-
-#container {
-    padding: 20px;
-
-  
-    
-   
+button:active {
+  opacity: 0.8;
 }
 
 h1 {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-#input {
-    width: 90%;
-    height: 40px;
-    margin-bottom: 20px;
-    padding: 0 10px;
-    font-size: 18px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-#keyboard {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 button {
-    height: 40px;
-    font-size: 18px;
-    border: none;
-    color: #fff;
-    border-radius: 5px;
-    cursor: pointer;
+  height: 40px;
+  font-size: 18px;
+  border: none;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .operator {
-    background-color: #007bff;
+  background-color: #007bff;
 }
 
 .operand {
-    background-color: #6c757d;
+  background-color: #6c757d;
+}
+.scientific-operator {
+  margin-top: 5%;
+  background-color: #007bff;
+  grid-column: span 2;
+}
+#input {
+  width: 90%;
+  height: 40px;
+  margin-bottom: 20px;
+  padding: 0 10px;
+  font-size: 18px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#keyboard {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  width: 100%;
 }
 
 #reset {
-    background-color: #dc3545;
+  background-color: #dc3545;
 }
 
 #calculate {
-    background-color: #28a745;
+  background-color: #28a745;
 }
-
-button:active {
-    opacity: 0.8;
+#copy-message {
+  color: green;
+  display: none;
+}
+#container {
+  padding: 20px;
 }
